--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="REFRESH" content="0; url=http://smtlaissezfaire.github.com/prototype_project/doc/index.html">
+    <meta http-equiv="REFRESH" content="0; url=http://smtlaissezfaire.github.com/hopcroft/doc/index.html">
   </head>
   <body>
   </body>
